--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
     <sonar.organization>nikhilzemoso</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <sonar.exclusions>**/com/zemoso/springassignment/model/**,
-      **/com/zemoso/springassignment/repository/**</sonar.exclusions>
+      **/com/zemoso/springassignment/repository/**,
+    **/com/zemoso/springassignment/dtos</sonar.exclusions>
   </properties>
   <dependencies>
     <dependency>
