--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <sonar.exclusions>**/com/zemoso/springassignment/model/**,
       **/com/zemoso/springassignment/repository/**,
-    **/com/zemoso/springassignment/dtos</sonar.exclusions>
+    **/com/zemoso/springassignment/dtos/**</sonar.exclusions>
   </properties>
   <dependencies>
     <dependency>
